force-app/main/default/objects/Favorite__c/Favorite__c.object-meta.xml
<CustomObject>
    <description>Stores record which indicates favorite Resource with respect to the User</description>
    <label>Favorite</label>
    <nameField>
        
        <displayFormat>Fav-{00000}</displayFormat>
        
        <label>Fav Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>