force-app/main/default/objects/Favorite__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nandita: 03/23/2020: created new field to map client to logged in contact (user) for My Clients functionality R1.1</description>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Favorites (Client)</relationshipLabel>
    <relationshipName>Favorites1</relationshipName>
    <type>Lookup</type>
</CustomField>