force-app/main/default/objects/Favorite__c/fields/LocationResource__c.field-meta.xml
<CustomField>
    <fullName>LocationResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Location Resource record</description>
    <label>Location Resource</label>
    <referenceTo>LocationResource__c</referenceTo>
    <relationshipLabel>Favorites</relationshipLabel>
    <relationshipName>Favorites</relationshipName>
    <type>Lookup</type>
</CustomField>