force-app/main/default/objects/Favorite__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <description>Capturing the Favorite Provider ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>