force-app/main/default/objects/Favorite__c/recordTypes/RE_Client_Favorite.recordType-meta.xml
<RecordType>
    <fullName>RE_Client_Favorite</fullName>
    <active>true</active>
    <label>Client Favorite</label>
</RecordType>