force-app/main/default/objects/Favorite__c/recordTypes/RE_Resource_Favorite.recordType-meta.xml
<RecordType>
    <fullName>RE_Resource_Favorite</fullName>
    <active>true</active>
    <label>Resource Favorite</label>
</RecordType>